--- a/you-sannim/public/index.html
+++ b/you-sannim/public/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
 
-    <title>My Portfolio</title>
+    <title>YOU SANNIM</title>
   </head>
   <body>
     <div id="root"></div>
